--- a/BadgeAwardEmail.html
+++ b/BadgeAwardEmail.html
@@ -6,6 +6,9 @@
 <p>
     {BadgeDescription}
 </p>
+<p>
+    {AwardComment}
+</p>
 
 <p>
     You can view all of your badges <a href="https://badgemeup.azurewebsites.net/MyBadges">here</a>.
@@ -16,7 +19,7 @@
     A: BadgeMeUp is an experimental viral system for creating and awarding badges that are based on skills, kudos, or just for fun!
 </p>
 <p>
-    Q: What can I do next?
+    Q: What can I do next?<br />
     A: You can get creative and <a href="https://badgemeup.azurewebsites.net/badges/Create">make a new badge</a>, or you can award any of your badges to someone that meets the criteria.
 </p>
 
