Code formatting, starting to style controls and tables.

--- a/BadgeAwardEmail.html
+++ b/BadgeAwardEmail.html
@@ -15,12 +15,14 @@
 </p>
 
 <p>
-    Q: What is this all about?<br />
-    A: BadgeMeUp is an experimental viral system for creating and awarding badges that are based on skills, kudos, or just for fun!
+    Q: What is this all about?<br/>
+    A: BadgeMeUp is an experimental viral system for creating and awarding badges that are based on skills, kudos, or
+    just for fun!
 </p>
 <p>
-    Q: What can I do next?<br />
-    A: You can get creative and <a href="https://badgemeup.azurewebsites.net/badges/Create">make a new badge</a>, or you can award any of your badges to someone that meets the criteria.
+    Q: What can I do next?<br/>
+    A: You can get creative and <a href="https://badgemeup.azurewebsites.net/badges/Create">make a new badge</a>, or you
+    can award any of your badges to someone that meets the criteria.
 </p>
 
 <p>
